<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--    <TextView-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:padding="16dp"-->
    <!--        android:id="@+id/textInfo"/>-->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="6dp"
        app:cardElevation="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ripple_dark_color"
            android:padding="16dp">

            <TextView
                android:id="@+id/textFullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fullName"
                android:textSize="16sp"
                android:textColor="@color/color_primary_text"
                android:gravity="center_horizontal"/>

            <TextView
                android:id="@+id/textPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobile"
                android:textSize="16sp"
                android:textColor="@color/color_primary_text"
                android:layout_below="@+id/textFullName"/>

            <TextView
                android:id="@+id/textGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textSize="14sp"
                android:textColor="@color/color_secondary_text"
                android:layout_below="@id/textPhone"/>

            <TextView
                android:id="@+id/textStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="14sp"
                android:layout_alignBaseline="@id/textGender"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>